[gd_scene load_steps=18 format=3 uid="uid://dispmmkisy7be"]

[ext_resource type="Script" path="res://scenes/characters/NPCs/soldier.gd" id="1_hkf4h"]
[ext_resource type="Texture2D" uid="uid://2ox68k2ikamj" path="res://assets/sprites/Characters/NPCs/soldier.png" id="2_nivrq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qx3uh"]
atlas = ExtResource("2_nivrq")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ol0e"]
atlas = ExtResource("2_nivrq")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnsow"]
atlas = ExtResource("2_nivrq")
region = Rect2(128, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_woiqo"]
atlas = ExtResource("2_nivrq")
region = Rect2(192, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0p4r"]
atlas = ExtResource("2_nivrq")
region = Rect2(256, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_watcn"]
atlas = ExtResource("2_nivrq")
region = Rect2(320, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jc2u"]
atlas = ExtResource("2_nivrq")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx3yy"]
atlas = ExtResource("2_nivrq")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wagfj"]
atlas = ExtResource("2_nivrq")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7co34"]
atlas = ExtResource("2_nivrq")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq3b3"]
atlas = ExtResource("2_nivrq")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_034m7"]
atlas = ExtResource("2_nivrq")
region = Rect2(320, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2k3mv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qx3uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ol0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnsow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_woiqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0p4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_watcn")
}],
"loop": false,
"name": &"attack_left",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jc2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx3yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wagfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7co34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dq3b3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_034m7")
}],
"loop": true,
"name": &"left",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ph4t3"]
radius = 3.80789

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sygpu"]
size = Vector2(16, 31.5)

[node name="soldier" type="CharacterBody2D"]
z_index = 1
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 5.0
script = ExtResource("1_hkf4h")

[node name="soldier" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2k3mv")
animation = &"attack_left"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 11.5)
shape = SubResource("CircleShape2D_ph4t3")

[node name="attack_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
position = Vector2(-14, -1)
shape = SubResource("RectangleShape2D_sygpu")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="path_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="detection box" type="Area2D" parent="."]
position = Vector2(-14, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection box"]
visible = false
shape = SubResource("RectangleShape2D_sygpu")

[connection signal="animation_finished" from="soldier" to="." method="_on_soldier_animation_finished"]
[connection signal="timeout" from="path_timer" to="." method="_on_path_timer_timeout"]
[connection signal="body_entered" from="detection box" to="." method="_on_detection_box_body_entered"]
